# coder-waifu

./: .gitignore  LICENSE  README.md  pyproject.toml
.agent/: architecture.md  context-summary.md  contract.json  decisions.md  evidence.json  last-verification.json  plan.json  state.json  verification.json
coder_waifu/: __init__.py  cli.py  ui.py
coder_waifu/checkpoint/: __init__.py  store.py
coder_waifu/discovery/: __init__.py  contract_synth.py  questions.py
coder_waifu/orchestrate/: __init__.py  spawner.py
coder_waifu/roles/: __init__.py  loader.py
coder_waifu/roles/builtins/: accessibility_specialist.yaml  backend_engineer.yaml  cto.yaml  data_engineer.yaml  dba.yaml  devops_engineer.yaml  frontend_designer.yaml  frontend_engineer.yaml  fullstack_engineer.yaml  it_admin.yaml  it_architect.yaml  ml_engineer.yaml  mobile_engineer.yaml  performance_engineer.yaml  product_manager.yaml  qa_engineer.yaml  security_engineer.yaml  software_architect.yaml  sre.yaml  technical_writer.yaml
coder_waifu/scaffold/: __init__.py
scripts/: smoke_test.sh
tests/: test_checkpoint.py  test_cli.py  test_contract_synth.py  test_discovery.py  test_orchestrate.py  test_roles.py  test_scaffold.py  test_smoke.py
