[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coder-waifu"
version = "0.1.0"
description = "Autonomous engineering orchestrator for Hermes Agent — spawns adversarial role-based agent pairs with discovery, checkpointing, and resumable automation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Eimi", email = "eimi@example.com" }]
keywords = ["agent", "orchestration", "hermes", "multi-agent", "autonomous", "engineering"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-xdist>=3",
  "ruff>=0.3",
  "mypy>=1.0",
]
hermes = [
  "hermes-agent",
  "PyYAML>=6,<7",
]
roles = [
  "PyYAML>=6,<7",
]

[project.scripts]
coder-waifu = "coder_waifu.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["coder_waifu*"]

[tool.setuptools.package-data]
coder_waifu = ["roles/builtins/*.yaml", "scaffold/templates/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --tb=short"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
